@@ -15,7 +15,6 @@ no_index:
   directory:
     - t
 requires:
-  Taint::Util: 0
   Test::More: 0
   XSLoader: 0
 resources:
@@ -24,4 +23,4 @@ resources:
   homepage: http://search.cpan.org/dist/Taint-Util/
   license: http://dev.perl.org/licenses/
   repository: http://github.com/avar/taint-util
-version: 0.07
+version: 0.08
