@@ -1,5 +1,5 @@
 package Taint::Util;
-our $VERSION = '0.07';
+our $VERSION = '0.08';
 use XSLoader ();
 
 @EXPORT_OK{qw(tainted taint untaint)} = ();
