@@ -7,3 +7,8 @@ main_module      = Util.pm
 [@AVAR]
 dist = Taint-Util
 bugtracker = rt
+no_AutoPrereq = 1
+
+[Prereq]
+XSLoader   = 0
+Test::More = 0
