@@ -1,3 +1,8 @@
+2010-03-17  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.08)
+
+	* META.yml: RT#55666: Don't depend on Taint::Util, resolves a
+	circular dependency
+
 2010-03-12  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.07)
 
 	* Util.pm: A new POD section titled "About tainting in Perl"
